2007-01-23  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-banner.c: Fixing documentation for HildonBanner.

	* src/hildon-caption.c:
	* src/hildon-caption.h: Fixing documentation for HildonCaption.

	* src/hildon-code-dialog.c: Fixing documentation for HildonCodeDialog.

	* src/hildon-controlbar.c: Fixing docuemtnation for HildonControlbar.

2007-01-23  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-banner.c:
	* src/hildon-banner.h: Fixing documentation. Removing the n-lines
	helper function.

	* src/hildon-note.c: Removing the n-lines wrapping stuff.

2007-01-23  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* tests/Makefile.am: Missing MAINTAINERCLEAN files.

	* tests/hildon-clock-widgets_tests.c:
	* tests/hildon-widgets_tests.c: Removing, old outo stuff.

	* tests/tc_banner_truncate.c: More info in header.

2007-01-23  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* tests/check-hildon-banner.c:
	* tests/check-hildon-calendar-popup.c:
	* tests/check-hildon-caption.c:
	* tests/check-hildon-code-dialog.c:
	* tests/check-hildon-color-button.c:
	* tests/check-hildon-color-chooser.c:
	* tests/check-hildon-controlbar.c:
	* tests/check-hildon-date-editor.c:
	* tests/check-hildon-dialoghelp.c:
	* tests/check-hildon-find-toolbar.c:
	* tests/check-hildon-font-selection-dialog.c:
	* tests/check-hildon-get-password-dialog.c:
	* tests/check-hildon-helper.c:
	* tests/check-hildon-name-password-dialog.c:
	* tests/check-hildon-note.c:
	* tests/check-hildon-number-editor.c:
	* tests/check-hildon-program.c:
	* tests/check-hildon-range-editor.c:
	* tests/check-hildon-scroll-area.c:
	* tests/check-hildon-seekbar.c:
	* tests/check-hildon-set-password-dialog.c:
	* tests/check-hildon-sort-dialog.c:
	* tests/check-hildon-system-sound.c:
	* tests/check-hildon-time-editor.c:
	* tests/check-hildon-time-picker.c:
	* tests/check-hildon-volumebar-range.c:
	* tests/check-hildon-volumebar.c: