@@ -1,5 +1,13 @@
 2007-01-23  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
 
+	* src/hildon-date-editor.c: Fixing the documentation for
+	HildonTimeEditor. Removing the year limitations.
+
+	* src/hildon-defines.c:
+	* src/hildon-defines.h: Fixing the defines documentation.
+
+2007-01-23  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
+
 	* src/hildon-banner.c: Fixing documentation for HildonBanner.
 
 	* src/hildon-caption.c:
